...
                                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                            <accessibility key="accessibilityConfiguration" hint="Transparent" identifier="1" label="Opacity 1"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="44" id="7Dj-jZ-1w9"/>
                                                <constraint firstAttribute="width" constant="44" id="vgI-dE-ICE"/>
                                            </constraints>
                                            <state key="normal" backgroundImage="OpacityIcon"/>
                                            <connections>
                                                <action selector="changeOpacity:" destination="-1" eventType="touchUpInside" id="FPq-be-n8X"/>
                                            </connections>
                                        </button>
                                        <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLO-Qn-eWN">
                                            <rect key="frame" x="64" y="0.0" width="44" height="44"/>
...
                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mjK-mq-bSF">
                                    <rect key="frame" x="476" y="8" width="72" height="72"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="72" id="GRe-fJ-viv"/>
                                        <constraint firstAttribute="width" constant="72" id="y1D-dO-3Uq"/>
                                    </constraints>
                                    <state key="normal" backgroundImage="ColorWheelIcon"/>
                                    <connections>
                                        <action selector="showColorWheel:" destination="-1" eventType="touchUpInside" id="wJU-gm-oFT"/>
                                    </connections>
                                </button>
                                <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="RTi-bR-3aq">
                                    <rect key="frame" x="42" y="24" width="473" height="44"/>
                                    <subviews>
                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s2f-X7-3th">
                                            <rect key="frame" x="0.0" y="0.0" width="220" height="44"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3jy-6Y-KZ4">
                                                    <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="red" label="Red"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="hAv-aR-m9R"/>
                                                        <constraint firstAttribute="height" constant="44" id="zAX-S9-Pmb"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                                    <state key="normal" title="⚫︎">
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YZ3-xo-4Vc">
                                            <rect key="frame" x="54" y="0.0" width="44" height="44"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="44" id="5CV-yK-raq"/>
                                                <constraint firstAttribute="width" constant="44" id="Ic5-Rk-Y76"/>
                                            </constraints>
                                            <state key="normal" image="BrushIcon"/>
                                            <connections>
                                                <action selector="showBrushes:" destination="-1" eventType="touchUpInside" id="ChE-Lt-sb3"/>
                                            </connections>
                                        </button>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XmH-HV-8G0">
                                            <rect key="frame" x="108" y="0.0" width="44" height="44"/>
...
