...
        case colorsButton:
            colorsButton.setImage(UIImage(named: "ColorIconFilled"), for: .normal)
            brushesButton.setImage(UIImage(named: "BrushIcon"), for: .normal)
            opacityButton.setImage(UIImage(named: "OpacityIcon"), for: .normal)
        case brushesButton:
            brushesButton.setImage(UIImage(named: "BrushIconFilled"), for: .normal)
            colorsButton.setImage(UIImage(named: "ColorIcon"), for: .normal)
            opacityButton.setImage(UIImage(named: "OpacityIcon"), for: .normal)
        case opacityButton:
            opacityButton.setImage(UIImage(named: "OpacityIconFilled"), for: .normal)
            brushesButton.setImage(UIImage(named: "BrushIcon"), for: .normal)
            colorsButton.setImage(UIImage(named: "ColorIcon"), for: .normal)
        default:
...
