...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rpu-ur-03S" userLabel="Color Wheel Container">
                                <rect key="frame" x="20" y="160" width="728" height="856"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wP1-N8-wBh" customClass="ColorWheel" customModule="Fingerpainter" customModuleProvider="target">
                                        <rect key="frame" x="8" y="8" width="712" height="840"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color-wheel" label="Color Wheel"/>
                                    </view>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="wP1-N8-wBh" firstAttribute="top" secondItem="Rpu-ur-03S" secondAttribute="topMargin" id="2CY-Fi-8aT"/>
                                    <constraint firstItem="wP1-N8-wBh" firstAttribute="centerX" secondItem="Rpu-ur-03S" secondAttribute="centerX" id="2Qt-aR-6sJ"/>
...
